# xiaomimimo

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  config.example.toml
apps/xiaomimimo-gui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/xiaomimimo-gui/src/: App.tsx  styles.css
apps/xiaomimimo-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/xiaomimimo-gui/src-tauri/src/: lib.rs  main.rs
apps/xiaomimimo-gui/src-tauri/src/commands/: artifact.rs  chat.rs  context.rs  mcp.rs  mod.rs  settings.rs  voice.rs  workspace.rs
apps/xiaomimimo-gui/src/components/: Onboarding.tsx
apps/xiaomimimo-gui/src/components/artifacts/: ArtifactEditor.tsx  ArtifactPanel.tsx  ArtifactRenderer.tsx
apps/xiaomimimo-gui/src/components/chat/: AttachmentTray.tsx  ChatPanel.tsx  MessageBubble.tsx  MessageList.tsx  PromptComposer.tsx  ReasoningBlock.tsx  ToolCallCard.tsx
apps/xiaomimimo-gui/src/lib/: tauri.ts  types.ts
apps/xiaomimimo-gui/src/stores/: chatStore.ts  settingsStore.ts
crates/agent/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/src/: lib.rs
crates/secrets/src/: lib.rs
crates/state/src/: lib.rs
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: client.rs  config.rs  main.rs  mcp.rs  models.rs  prompts.rs
crates/tui/src/client/: chat.rs
crates/tui/src/commands/: provider.rs
crates/tui/src/core/: engine.rs
crates/tui/src/prompts/: base.md  base.txt
crates/tui/src/snapshot/: repo.rs
crates/tui/src/tools/: fetch_url.rs
crates/tui/src/tui/: provider_picker.rs  ui.rs
(+9 files in other folders)
